RISDEV-8402
Simple search | Show most relevant expression (backend)
* Refactored index and alias creation to enable consistency across environments and more simple manual steps when recreating an index due to a different mapping
* Index creation now uses templates. The templates are updated every time the application starts up. This is the same across all environments including local dev
* As a consequence index creation is now managed centrally instead of being annotation based on the repositories
* Refactored and simplified the way tests load test data before they start
* Fixed failing tests
* Disabled Data tests. They only pass when special manual steps are taken first and are therefore already excluded from the test suite. Disabling them stops them from failing when using intellij to run all tests.
* Removed a test about aliases that wasn't testing what it said and now no longer makes sense
* Updated documentation